--- a/config/locales/spa/action.yml
+++ b/config/locales/spa/action.yml
@@ -94,8 +94,21 @@ spa:
       # accountancy: "Accountancy dashboard"
       # finances: "Finances dashboard"
       # general: "General dashboard"
+      # index: "General dashboard"
       # production: "Production dashboard"
+      # purchases: "Purchases dashboard"
       # relationship: "Relationship dashboard"
+      # sales: "Sales dashboard"
+      # settings: "Settings dashboard"
+      # settings_accountancy: "Accountancy settings  dashboard"
+      # settings_base: "Base settings dashboard"
+      # settings_production: "Production settings dashboard"
+      # settings_products: "Products settings dashboard"
+      # settings_purchases: "Purchases settings dashboard"
+      # settings_relationship: "Relationship settings dashboard"
+      # settings_sales: "Sales settings dashboard"
+      # settings_stocks: "Stocks settings dashboard"
+      # stocks: "Stocks dashboard"
       # trade: "Trade dashboard"
       # welcome: "Welcome on Ekylibre"
     delays:
@@ -475,10 +488,11 @@ spa:
     # account_balances: "Account balances"
     accountancy: "Contabilidad" #?
     accounts: "Plan de cuento"
+    # admin: "Administration"
     application: "Aplicación"
     # areas: "Postal areas"
     # assets: "Assets"
-    authentication: "Autenticación" #?
+    authentication: "Autenticación"
     bank_statements: "Levantar de cuntos bancarios"
     # cash_transfers: "Cash transfers"
     cashes: "Tresorerias"
@@ -497,6 +511,7 @@ spa:
     document_templates: "Modelos de documento"
     # documents: "Documents"
     # entities: "People"
+    # entity_addresses: "People addresses"
     # entity_categories: "Person categories"
     # entity_link_natures: "Link types"
     # entity_links: "Entity links"
@@ -1337,8 +1352,8 @@ spa:
     use_renew: "Seleccionar un periodico para los aplazamientos de nuevo"
     used_accounts: "Cuentos utilozados unico"
     user_create: "Añadir un nuevo utilizador" #?
+    user_name: "Nombre de usuario"
     user_update: "Modificar las informaciones del utilizador" #?
-    username: "Nombre de usuario"
     # uses: "Tools"
     # valid: "Valid"
     validate: "Validar"
