--- a/config/locales/eng/action.yml
+++ b/config/locales/eng/action.yml
@@ -1249,7 +1249,7 @@ eng:
     use_incoming_payment: "Add incoming payment %{payment}"
     use_renew: "Select the journal to carry over"
     used_accounts: "Used accounts only"
-    username: "Username"
+    user_name: "Username"
     uses: "Tools"
     valid: "Valid"
     validate: "Validate"
@@ -1392,7 +1392,7 @@ eng:
     need_balanced_journal_to_tax_declaration: "All your journals must be closed and balanced at that date." #?
     need_cash_to_record_statements: "You must be at least create a bank account to enter a statement."
     need_closed_financial_year_to_declaration: "You must have a closed financial year to create a VAT return." #?
-    need_company_code_to_login: "You must select your company in order to connect with that username." #?
+    need_company_code_to_login: "You must select your company in order to connect with that user_name." #?
     need_entries_to_point: "No entry was found for the period of the bank statement."
     need_journal_to_manage_tax_declaration: "You must have at least one journal of various operations and a journal of sales or purchases in order to save tax returns." #?
     need_payment_mode_to_create_deposit: "You must specify a mode of payment in order to make deposits"
@@ -1404,7 +1404,7 @@ eng:
     need_warehouse_to_create_sale_line: "You must create a warehouse to be able to create a sale" #?
     need_warehouse_to_record_stock_moves: "You must create a warehouse to be able to manage stocks."
     new_actual_number: "The new number is being %{actual_number}"
-    no_authenticated: "You could not be identified. The username or password must be incorrect."
+    no_authenticated: "You could not be identified. The user_name or password must be incorrect."
     no_closable_financial_year: "No closable financial year." #?
     no_closable_journal: "No closable journal"
     no_depositable_payments: "There are no payment to deposit"
