--- a/config/locales/eng/models.yml
+++ b/config/locales/eng/models.yml
@@ -216,19 +216,19 @@ eng:
     models:
       account: "Account"
       account_balance: "Account balance"
-      # animal: "Animal"
-      # animal_diagnostic: "Animal diagnostic"
-      # animal_disease: "Animal disease"
-      # animal_drug: "Animal drug"
-      # animal_drug_nature: "Animal drug nature"
-      # animal_event: "Animal event"
-      # animal_event_nature: "Animal event nature"
-      # animal_group: "Animal group"
-      # animal_posology: "Animal posology"
-      # animal_prescription: "Animal prescription"
-      # animal_race: "Animal race"
-      # animal_race_nature: "Animal race nature"
-      # animal_treatment: "Animal treatment"
+      animal: "Animal"
+      animal_diagnostic: "Animal diagnostic"
+      animal_disease: "Animal disease"
+      animal_drug: "Animal drug"
+      animal_drug_nature: "Animal drug type"
+      animal_event: "Animal event"
+      animal_event_nature: "Animal event type"
+      animal_group: "Animal group"
+      animal_posology: "Animal posology"
+      animal_prescription: "Animal prescription"
+      animal_race: "Animal race"
+      animal_race_nature: "Animal race type"
+      animal_treatment: "Animal treatment"
       area: "Area"
       asset: "Asset"
       asset_depreciation: "Asset depreciation"
@@ -236,7 +236,7 @@ eng:
       cash: "Cash"
       cash_transfer: "Cash transfer"
       company: "Company"
-      contact: "Contact" #?
+      contact: "" #?
       cultivation: "Cultivation"
       custom_field: "Complement field"
       custom_field_choice: "Complement field choice"
@@ -249,7 +249,7 @@ eng:
       document: "Document"
       document_template: "Document template"
       entity: "Person"
-      # entity_address: "Entity address"
+      entity_address: "Address"
       entity_category: "Person category"
       entity_link: "Person link"
       entity_link_nature: "Person link type"
@@ -313,13 +313,13 @@ eng:
       tax: "Tax"
       tax_declaration: "Tax declaration"
       tool: "Tool"
-      # tool_nature: "Tool nature"
+      tool_nature: "Tool type"
       tracking: "Tracking"
       tracking_state: "Tracking state"
       transfer: "Transfer"
       transport: "Transport"
       unit: "Unit"
-      user: "User" #?
+      user: "" #?
       warehouse: "Warehouse"
   attributes:
     account: "Account"
@@ -334,19 +334,18 @@ eng:
     activity_code: "Activity code"
     actual_number: "Actual number"
     address: "Address"
-    # addresses: "Addresses"
+    addresses: "Addresses"
     admin: "Admin"
     # age_max: "Age max"
     # age_min: "Age min"
     agency_code: "Agency code"
     allocation_account: "Allocation account"
     amount: "Amount"
-    # animal: "Animal"
-    animal_cares: "Animal cares" #?
-    # animal_drugs: "Animal drugs"
-    # animal_events: "Animal events"
-    # animal_group: "Animal group"
-    # animal_race_nature: "Animal race nature"
+    animal: "Animal"
+    animal_drugs: "Animal drugs"
+    animal_events: "Animal events"
+    animal_group: "Animal group"
+    animal_race_nature: "Animal race nature"
     animals: "Animals"
     annotation: "Annotation"
     area: "Area"
@@ -437,7 +436,7 @@ eng:
     commission_account: "Commission account"
     commission_amount: "Commission amount"
     commission_base_amount: "Base amount of the commission"
-    commission_percent: "Commission percentage"
+    commission_percentage: "Commission percentage"
     commissioned_incoming_payment_modes: "Commissioned incoming payment modes"
     company: "Company" #?
     component: "Component"
@@ -453,7 +452,7 @@ eng:
     contact: "Contact"
     contacts: "Contacts"
     conveyors: "Conveyors"
-    # coordinate: "Coordinate"
+    coordinate: "Coordinate"
     # corpse_location: "Corpse location"
     country: "Country"
     created_at: "Created at"
@@ -475,18 +474,20 @@ eng:
     custom_field_choices: "Custom field choices" #?
     custom_field_data: "Custom field data"
     custom_fields: "Custom fields" #?
+    customized: "Customized"
+    customized_type: "Customized type"
     data: "Data"
     date_value: "Date value"
     datetime_value: "Datetime value"
     dead_on: "Dead on"
     debit: "Debit"
-    decimal_max: "Decimal max"
-    decimal_min: "Decimal min"
+    decimal_max: "Decimal max" #?
+    decimal_min: "Decimal min" #?
     decimal_value: "Decimal value"
     declared_on: "Declared on"
     default_contact: "Default contact"
     default_currency: "Default currency"
-    # default_mail_address: "Default mail address"
+    default_mail_address: "Default mail address"
     default_stock: "Default stock"
     deferred_payment: "Deferred payment"
     delays: "Delays" #?
@@ -516,14 +517,13 @@ eng:
     depreciation_percentage: "Depreciation percentage"
     depreciations: "Depreciations"
     description: "Description"
-    # detail_payments: "Detail payments"
+    detail_payments: "Detail payments"
     diagnostics: "Diagnostics"
     diff_less: "Diff less"
     diff_more: "Diff more"
     direct_links: "Direct links"
     direction: "Direction"
     direction_label: "Direction label"
-    discount_rate: "Discount rate" #?
     disease: "Disease"
     diseases: "Diseases"
     district: "District"
@@ -534,7 +534,7 @@ eng:
     downpayment: "Downpayment"
     downpayment_amount: "Downpayment amount"
     downpayment_minimum: "Downpayment minimum"
-    downpayment_rate: "Downpayment rate"
+    downpayment_percentage: "Downpayment percentage"
     drug: "Drug"
     drug_admission_path: "Drug admission path"
     drugs: "Drugs"
@@ -584,10 +584,9 @@ eng:
     expression: "Expression"
     extension: "Extension"
     family: "Family"
-    family_label: "Family label" #?
-    # father: "Father"
+    father: "Father"
     fax: "Fax" #?
-    # faxes: "Faxes"
+    faxes: "Faxes"
     filename: "Filename"
     filesize: "Filesize"
     filtered_columns: "Filtered columns"
@@ -622,7 +621,7 @@ eng:
     iban: "IBAN"
     iban_label: "IBAN"
     id: "ID"
-    # identification_number: "Identification number"
+    identification_number: "Identification number"
     immobilizations_products: "Immobilizations products"
     importance: "Importance"
     in_cash: "In cash"
@@ -644,8 +643,7 @@ eng:
     inventories: "Inventories" #?
     inventory: "Inventory"
     inventory_lines: "Inventory lines"
-    # invoice_address: "Invoice address"
-    invoice_contact: "Sales invoice contact" #?
+    invoice_address: "Invoice address"
     invoiced_on: "Invoiced on"
     invoices_count: "Invoices count"
     is_debit: "Is debit"
@@ -675,18 +673,9 @@ eng:
     last_name: "Last name"
     last_number: "Last number"
     last_year: "Last year"
-    latitude: "Latitude" #?
     # left_on: "Left on"
-    length_max: "Length max"
     letter: "Letter"
     letter_format: "Letter format"
-    line_2: "Line 2" #?
-    line_3: "Line 3" #?
-    line_4: "Line 4" #?
-    line_5: "Line 5" #?
-    line_6: "Line 6" #?
-    line_6_city: "Line 6 city" #?
-    line_6_code: "Line 6 code" #?
     lines: "Lines"
     listing: "Listing"
     listing_node_items: "Listing node items" #?
@@ -700,23 +689,23 @@ eng:
     lock_version: "Version"
     locked: "Locked"
     # log: "Log"
-    # loggable: "Loggable"
+    loggable: "Loggable"
     longitude: "Longitude" #?
     lost: "Lost"
     luminance: "Luminance"
     mail: "Mail"
-    # mail_area: "Mail area"
-    # mail_auto_update: "Mail auto update"
+    mail_area: "Mail area"
+    mail_auto_update: "Mail auto update"
     mail_columns: "Mail columns"
-    # mail_country: "Mail country"
-    # mail_geolocation: "Mail geolocation"
-    # mail_line_1: "Mail line 1"
-    # mail_line_2: "Mail line 2"
-    # mail_line_3: "Mail line 3"
-    # mail_line_4: "Mail line 4"
-    # mail_line_5: "Mail line 5"
-    # mail_line_6: "Mail line 6"
-    # mails: "Mails"
+    mail_country: "Mail country"
+    mail_geolocation: "Mail geolocation"
+    mail_line_1: "Addressee, department"
+    mail_line_2: "Appartment, floor"
+    mail_line_3: "Building, residence"
+    mail_line_4: "Number and Street"
+    mail_line_5: "Special mentions, place name"
+    mail_line_6: "Postal code and city"
+    mails: "Mails"
     major_accounts: "Major accounts" #?
     # managed_events: "Managed events"
     # managed_sales: "Managed sales"
@@ -724,13 +713,17 @@ eng:
     # managed_transports: "Managed transports"
     # managed_unpaid_sales: "Managed unpaid sales"
     mandates: "Mandates"
-    # maximum_grantable_reduction_percent: "Maximum grantable reduction percent"
+    # maximal_grantable_reduction_percentage: "Maximal grantable reduction percentage"
+    # maximal_length: "Maximal length"
+    # maximal_value: "Maximal value"
     min_duration: "Min duration"
+    # minimal_length: "Minimal length"
+    # minimal_value: "Minimal value"
     mobile: "Mobile" #?
     # mobiles: "Mobiles"
     mode: "Mode"
-    # mother: "Mother"
-    # moved_at: "Moved at"
+    mother: "Mother"
+    moved_at: "Moved at"
     moved_on: "Moved on"
     moves: "Moves"
     name: "Name"
@@ -749,7 +742,7 @@ eng:
     number_increment: "Number increment"
     number_start: "Number start"
     observations: "Observations"
-    # of_company: "Of company"
+    of_company: "Of the company"
     office: "Office"
     old_password: "Old password"
     operation: "Operation"
@@ -819,7 +812,7 @@ eng:
     posologies: "Posologies"
     postcode: "Postcode"
     preferences: "Preferences"
-    # pregnant: "Pregnant"
+    pregnant: "Pregnant"
     # prescripted: "Prescripted"
     # prescripted_on: "Prescripted on"
     # prescription: "Prescription"
@@ -881,12 +874,13 @@ eng:
     reconcilable: "Reconcilable"
     record_value: "Record value"
     record_value_type: "Record value type"
-    # recruited_on: "Recruited on"
+    recruited_on: "Recruited on"
     reductible: "Reductible"
     reduction: "Reduction"
     reduction_origin: "Reduction origin"
-    reduction_percent: "Reduction percentage"
-    reduction_rate: "Reduction rate"
+    reduction_percent: "Reduction percentage" #?
+    reduction_percentage: "Reduction percentage"
+    reduction_rate: "Reduction rate" #?
     reduction_submissive: "Reduction submissive"
     reductions: "Reductions"
     reference_number: "Reference number"
@@ -896,6 +890,7 @@ eng:
     remaining_duration: "Remaining duration"
     required: "Required"
     reservoir: "Reservoir"
+    # reservoirs: "Reservoirs"
     resource: "Resource"
     resource_type: "Resource type"
     responsible: "Responsible"
@@ -923,7 +918,6 @@ eng:
     self_contacts: "Self contacts"
     sequences: "Sequences" #?
     serial: "Serial"
-    service_coeff: "Service coeff" #?
     sex: "Sex"
     sha256: "SHA256"
     # shape: "Shape"
@@ -1025,7 +1019,7 @@ eng:
     used_amount: "Used amount"
     useful_lines: "Useful lines"
     user: "User"
-    # username: "Username"
+    user_name: "User name"
     users: "Users"
     uses: "Uses"
     value: "Value"
@@ -1317,7 +1311,7 @@ eng:
         sales_invoice: "Sales invoice"
       sale: "Sale %{number}"
       sales_conditions:
-        downpayment: "A downpayment of %{percent}% (i.e. %{amount}€) must be paid at the signature of this present estimate."
+        downpayment: "A downpayment of %{percentage}% (i.e. %{amount}€) must be paid at the signature of this present estimate."
         validity: "This estimate and its general conditions are available until the %{expiration}."
       sales_invoice:
         label:
@@ -1334,7 +1328,7 @@ eng:
       can_not_use_this_tracking: "You can not use the tracking %{name}, the requested quantity is greater than the available quantity"
       currency_is_not_sale_currency: "The currency of the price differs from the sale currency"
       no_product: "[No product]"
-      reduction_on: "Discount of %{percent}%  on %{product}"
+      reduction_on: "Reduction of %{percentage}%  on %{product}"
       tracking: "S/N: %{serial}"
       warehouse_can_not_transfer_product: "The product %{product} can not be used with %{warehouse}, because it contains only %{contained_product} "
     sequence:
@@ -1447,10 +1441,6 @@ eng:
       no_right_defined_for_this_part_of_the_application: "No right defined for this part of the application: %{controller}%{action}" #?
       no_right_defined_for_this_part_of_the_application_and_this_user: "You can not access to this page"
   enumerize:
-    animal:
-      sex:
-        female: "Female"
-        male: "Male"
     asset:
       depreciation_method:
         graduated: "Graduated"
@@ -1503,3 +1493,6 @@ eng:
         service: "Service"
         subscription: "Subcription"
         transfer: "Transfer"
+    sex:
+      female: "Female"
+      male: "Male"
