--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -79,8 +79,21 @@ jpn:
       # accountancy: "Accountancy dashboard"
       # finances: "Finances dashboard"
       # general: "General dashboard"
+      # index: "General dashboard"
       # production: "Production dashboard"
+      # purchases: "Purchases dashboard"
       # relationship: "Relationship dashboard"
+      # sales: "Sales dashboard"
+      # settings: "Settings dashboard"
+      # settings_accountancy: "Accountancy settings  dashboard"
+      # settings_base: "Base settings dashboard"
+      # settings_production: "Production settings dashboard"
+      # settings_products: "Products settings dashboard"
+      # settings_purchases: "Purchases settings dashboard"
+      # settings_relationship: "Relationship settings dashboard"
+      # settings_sales: "Sales settings dashboard"
+      # settings_stocks: "Stocks settings dashboard"
+      # stocks: "Stocks dashboard"
       # trade: "Trade dashboard"
       # welcome: "Welcome on Ekylibre"
     delays:
@@ -452,10 +465,11 @@ jpn:
     # account_balances: "Account balances"
     accountancy: "会計" #?
     # accounts: "Plan of accounts"
+    # admin: "Administration"
     application: "一般的な車掌"
     # areas: "Postal areas"
     # assets: "Assets"
-    authentication: "認証" #?
+    authentication: "認証"
     # bank_statements: "Bank statements"
     # cash_transfers: "Cash transfers"
     # cashes: "Cashes"
@@ -474,6 +488,7 @@ jpn:
     # document_templates: "Document templates"
     # documents: "Documents"
     # entities: "People"
+    # entity_addresses: "People addresses"
     # entity_categories: "Person categories"
     # entity_link_natures: "Link types"
     # entity_links: "Entity links"
@@ -1202,7 +1217,7 @@ jpn:
     # use_incoming_payment: "Add incoming payment %{payment}"
     # use_renew: "Select the journal to carry over"
     # used_accounts: "Used accounts only"
-    username: "ユーザー名"
+    user_name: "ユーザー名"
     # uses: "Tools"
     # valid: "Valid"
     # validate: "Validate"
@@ -1346,7 +1361,7 @@ jpn:
     # need_balanced_journal_to_tax_declaration: "All your journals must be closed and balanced at that date."
     # need_cash_to_record_statements: "You must be at least create a bank account to enter a statement."
     # need_closed_financial_year_to_declaration: "You must have a closed financial year to create a VAT return."
-    # need_company_code_to_login: "You must select your company in order to connect with that username."
+    # need_company_code_to_login: "You must select your company in order to connect with that user_name."
     # need_entries_to_point: "No entry was found for the period of the bank statement."
     # need_journal_to_manage_tax_declaration: "You must have at least one journal of various operations and a journal of sales or purchases in order to save tax returns."
     # need_payment_mode_to_create_deposit: "You must specify a mode of payment in order to make deposits"
@@ -1358,7 +1373,7 @@ jpn:
     # need_warehouse_to_create_sale_line: "You must create a warehouse to be able to create a sale"
     # need_warehouse_to_record_stock_moves: "You must create a warehouse to be able to manage stocks."
     # new_actual_number: "The new number is being %{actual_number}"
-    # no_authenticated: "You could not be identified. The username or password must be incorrect."
+    # no_authenticated: "You could not be identified. The user_name or password must be incorrect."
     # no_closable_financial_year: "No closable financial year."
     # no_closable_journal: "No closable journal"
     # no_depositable_payments: "There are no payment to deposit"
@@ -1377,7 +1392,7 @@ jpn:
     # record_cannot_be_removed: "The record can not be deleted"
     # record_has_been_correctly_removed: "The record has been removed successfully"
     # record_has_not_been_removed: "The record has not been removed"
-    # restoration_finished: "Restoring the backup has completed (in %{value} seconds). Your company ID is %{code}"
+    # restoration_finished: "Restoring the backup has completed (in %{value} seconds)."
     # sale_already_invoiced: "The sale has already been invoiced: you can not define delivery "
     # sale_cannot_be_updated: "The estimate is no longer editable."
     # sale_cant_be_deleted: "The sale can not be deleted."
