--- a/config/locales/spa/models.yml
+++ b/config/locales/spa/models.yml
@@ -222,6 +222,19 @@ spa:
     models:
       # account: "Account"
       # account_balance: "Account balance"
+      # animal: "Animal"
+      # animal_diagnostic: "Animal diagnostic"
+      # animal_disease: "Animal disease"
+      # animal_drug: "Animal drug"
+      # animal_drug_nature: "Animal drug type"
+      # animal_event: "Animal event"
+      # animal_event_nature: "Animal event type"
+      # animal_group: "Animal group"
+      # animal_posology: "Animal posology"
+      # animal_prescription: "Animal prescription"
+      # animal_race: "Animal race"
+      # animal_race_nature: "Animal race type"
+      # animal_treatment: "Animal treatment"
       # area: "Area"
       # asset: "Asset"
       # asset_depreciation: "Asset depreciation"
@@ -229,7 +242,7 @@ spa:
       # cash: "Cash"
       # cash_transfer: "Cash transfer"
       company: "Compañía"
-      # contact: "Contact"
+      # contact: ""
       # cultivation: "Cultivation"
       # custom_field: "Complement field"
       # custom_field_choice: "Complement field choice"
@@ -242,6 +255,7 @@ spa:
       # document: "Document"
       # document_template: "Document template"
       # entity: "Person"
+      # entity_address: "Address"
       # entity_category: "Person category"
       # entity_link: "Person link"
       # entity_link_nature: "Person link type"
@@ -305,12 +319,13 @@ spa:
       # tax: "Tax"
       # tax_declaration: "Tax declaration"
       # tool: "Tool"
+      # tool_nature: "Tool type"
       # tracking: "Tracking"
       # tracking_state: "Tracking state"
       # transfer: "Transfer"
       # transport: "Transport"
       # unit: "Unit"
-      # user: "User"
+      # user: ""
       # warehouse: "Warehouse"
   attributes:
     # account: "Account"
@@ -325,11 +340,16 @@ spa:
     # activity_code: "Activity code"
     # actual_number: "Actual number"
     # address: "Address"
+    # addresses: "Addresses"
     # admin: "Admin"
     # agency_code: "Agency code"
     # allocation_account: "Allocation account"
     # amount: "Amount"
-    # animal_cares: "Animal cares"
+    # animal: "Animal"
+    # animal_drugs: "Animal drugs"
+    # animal_events: "Animal events"
+    # animal_group: "Animal group"
+    # animal_race_nature: "Animal race nature"
     # animals: "Animals"
     # annotation: "Annotation"
     # area: "Area"
@@ -418,7 +438,7 @@ spa:
     # commission_account: "Commission account"
     # commission_amount: "Commission amount"
     # commission_base_amount: "Base amount of the commission"
-    # commission_percent: "Commission percentage"
+    # commission_percentage: "Commission percentage"
     # commissioned_incoming_payment_modes: "Commissioned incoming payment modes"
     company: "Compañía"
     company_id: "Compañía" #?
@@ -435,6 +455,7 @@ spa:
     # contact: "Contact"
     # contacts: "Contacts"
     # conveyors: "Conveyors"
+    # coordinate: "Coordinate"
     # country: "Country"
     # created_at: "Created at"
     # created_on: "Created on"
@@ -455,6 +476,8 @@ spa:
     # custom_field_choices: "Custom field choices"
     # custom_field_data: "Custom field data"
     # custom_fields: "Custom fields"
+    # customized: "Customized"
+    # customized_type: "Customized type"
     # data: "Data"
     # date_value: "Date value"
     # datetime_value: "Datetime value"
@@ -466,6 +489,7 @@ spa:
     # declared_on: "Declared on"
     # default_contact: "Default contact"
     # default_currency: "Default currency"
+    # default_mail_address: "Default mail address"
     # default_stock: "Default stock"
     # deferred_payment: "Deferred payment"
     # delays: "Delays"
@@ -495,13 +519,13 @@ spa:
     # depreciation_percentage: "Depreciation percentage"
     # depreciations: "Depreciations"
     # description: "Description"
+    # detail_payments: "Detail payments"
     # diagnostics: "Diagnostics"
     # diff_less: "Diff less"
     # diff_more: "Diff more"
     # direct_links: "Direct links"
     # direction: "Direction"
     # direction_label: "Direction label"
-    # discount_rate: "Discount rate"
     # disease: "Disease"
     # diseases: "Diseases"
     # district: "District"
@@ -512,7 +536,7 @@ spa:
     # downpayment: "Downpayment"
     # downpayment_amount: "Downpayment amount"
     # downpayment_minimum: "Downpayment minimum"
-    # downpayment_rate: "Downpayment rate"
+    # downpayment_percentage: "Downpayment percentage"
     # drug: "Drug"
     # drug_admission_path: "Drug admission path"
     # drugs: "Drugs"
@@ -561,8 +585,9 @@ spa:
     # expression: "Expression"
     # extension: "Extension"
     # family: "Family"
-    # family_label: "Family label"
+    # father: "Father"
     # fax: "Fax"
+    # faxes: "Faxes"
     # filename: "Filename"
     # filesize: "Filesize"
     # filtered_columns: "Filtered columns"
@@ -597,6 +622,7 @@ spa:
     # iban: "IBAN"
     # iban_label: "IBAN"
     # id: "ID"
+    # identification_number: "Identification number"
     # immobilizations_products: "Immobilizations products"
     # importance: "Importance"
     # in_cash: "In cash"
@@ -617,7 +643,7 @@ spa:
     # inventories: "Inventories"
     # inventory: "Inventory"
     # inventory_lines: "Inventory lines"
-    # invoice_contact: "Sales invoice contact"
+    # invoice_address: "Invoice address"
     # invoiced_on: "Invoiced on"
     # invoices_count: "Invoices count"
     # is_debit: "Is debit"
@@ -645,17 +671,8 @@ spa:
     # last_name: "Last name"
     # last_number: "Last number"
     # last_year: "Last year"
-    # latitude: "Latitude"
-    # length_max: "Length max"
     # letter: "Letter"
     # letter_format: "Letter format"
-    # line_2: "Line 2"
-    # line_3: "Line 3"
-    # line_4: "Line 4"
-    # line_5: "Line 5"
-    # line_6: "Line 6"
-    # line_6_city: "Line 6 city"
-    # line_6_code: "Line 6 code"
     # lines: "Lines"
     # listing: "Listing"
     # listing_node_items: "Listing node items"
@@ -668,16 +685,30 @@ spa:
     # location: "Location"
     # lock_version: "Version"
     # locked: "Locked"
+    # loggable: "Loggable"
     # longitude: "Longitude"
     # lost: "Lost"
     # luminance: "Luminance"
     # mail: "Mail"
+    # mail_area: "Mail area"
+    # mail_auto_update: "Mail auto update"
     # mail_columns: "Mail columns"
+    # mail_country: "Mail country"
+    # mail_geolocation: "Mail geolocation"
+    # mail_line_1: "Addressee, department"
+    # mail_line_2: "Appartment, floor"
+    # mail_line_3: "Building, residence"
+    # mail_line_4: "Number and Street"
+    # mail_line_5: "Special mentions, place name"
+    # mail_line_6: "Postal code and city"
+    # mails: "Mails"
     # major_accounts: "Major accounts"
     # mandates: "Mandates"
     # min_duration: "Min duration"
     # mobile: "Mobile"
     # mode: "Mode"
+    # mother: "Mother"
+    # moved_at: "Moved at"
     # moved_on: "Moved on"
     # moves: "Moves"
     name: "Nombre"
@@ -695,6 +726,7 @@ spa:
     # number_increment: "Number increment"
     # number_start: "Number start"
     # observations: "Observations"
+    # of_company: "Of the company"
     # office: "Office"
     # old_password: "Old password"
     # operation: "Operation"
@@ -761,6 +793,7 @@ spa:
     # posologies: "Posologies"
     # postcode: "Postcode"
     # preferences: "Preferences"
+    # pregnant: "Pregnant"
     # prescriptions: "Prescriptions"
     # pretax_amount: "Pre-tax amount"
     # price: "Price"
@@ -815,10 +848,12 @@ spa:
     # reconcilable: "Reconcilable"
     # record_value: "Record value"
     # record_value_type: "Record value type"
+    # recruited_on: "Recruited on"
     # reductible: "Reductible"
     # reduction: "Reduction"
     # reduction_origin: "Reduction origin"
     # reduction_percent: "Reduction percentage"
+    # reduction_percentage: "Reduction percentage"
     # reduction_rate: "Reduction rate"
     # reduction_submissive: "Reduction submissive"
     # reductions: "Reductions"
@@ -856,7 +891,6 @@ spa:
     # self_contacts: "Self contacts"
     # sequences: "Sequences"
     # serial: "Serial"
-    # service_coeff: "Service coeff"
     # sex: "Sex"
     # sha256: "SHA256"
     # siren: "Siren"
@@ -956,6 +990,7 @@ spa:
     # used_amount: "Used amount"
     # useful_lines: "Useful lines"
     # user: "User"
+    # user_name: "User name"
     # users: "Users"
     # uses: "Uses"
     # value: "Value"
@@ -977,10 +1012,7 @@ spa:
     # with_transport: "With transport"
     # work_center: "Work center"
   enumerize:
-    animal:
-      sex:
-        # female: "Female"
-        # male: "Male"
+    animal: #?
     asset:
       depreciation_method:
         # graduated: "Graduated"
@@ -1035,6 +1067,9 @@ spa:
         # service: "Service"
         # subscription: "Subcription"
         # transfer: "Transfer"
+    sex:
+      # female: "Female"
+      # male: "Male"
   models:
     account:
       # label: "%{number} - %{name}"
@@ -1322,7 +1357,7 @@ spa:
         # sales_invoice: "Sales invoice"
       # sale: "Sale %{number}"
       sales_conditions:
-        # downpayment: "A downpayment of %{percent}% (i.e. %{amount}€) must be paid at the signature of this present estimate."
+        # downpayment: "A downpayment of %{percentage}% (i.e. %{amount}€) must be paid at the signature of this present estimate."
         # validity: "This estimate and its general conditions are available until the %{expiration}."
       sales_invoice:
         label:
@@ -1339,7 +1374,7 @@ spa:
       # can_not_use_this_tracking: "You can not use the tracking %{name}, the requested quantity is greater than the available quantity"
       # currency_is_not_sale_currency: "The currency of the price differs from the sale currency"
       # no_product: "[No product]"
-      # reduction_on: "Discount of %{percent}%  on %{product}"
+      # reduction_on: "Reduction of %{percentage}%  on %{product}"
       # tracking: "S/N: %{serial}"
       # warehouse_can_not_transfer_product: "The product %{product} can not be used with %{warehouse}, because it contains only %{contained_product} "
     sales_invoice: #?
